--- a/18_js_functional/index.html
+++ b/18_js_functional/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-
   <script src="http://underscorejs.org/underscore-min.js"></script>
+  <script src="./alt.js"></script>
   <script src="./index.js"></script>
 
 </body>
