--- a/21_fetch_dom/index.html
+++ b/21_fetch_dom/index.html
@@ -6,27 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="./index.css">
   <title>Document</title>
-
-
 </head>
 <body>
 
-  <div class="container">
-    <div class="student-list">
 
-      <ul class="student-list">
-        <li class="student-item">Graham</li>
-        <li class="student-item">Ashlee</li>
-        <li class="student-item">Jess</li>
+  <div class="container">
+    <div class="sidebar">
+      <ul class="movie-list">
+
       </ul>
     </div>
-    <div id="student-detail">
-      <p>Really diligent student</p>
+
+    <div class="main">
+      <p>Main things</p>
     </div>
+
   </div>
 
   <script src="./index.js"></script>
-
+  <script src="./app.js"></script>
 
 </body>
 </html>
