--- a/21_fetch/index.html
+++ b/21_fetch/index.html
@@ -12,13 +12,13 @@
 
   <div class="container">
     <div class="sidebar">
-      <ul class="movie-list">
+      <ul id="movie-list" class="movies">
 
       </ul>
     </div>
 
-    <div class="main">
-      <p>Main things</p>
+    <div id="movie-detail" class="main">
+
     </div>
 
   </div>
